--- a/web/package.json
+++ b/web/package.json
@@ -41,8 +41,8 @@
     "next-sitemap": "^4.2.3",
     "next-themes": "^0.4.6",
     "prisma": "^6.14.0",
-    "react": "^19.1.0",
-    "react-dom": "19.1.0",
+    "react": "^19.1.1",
+    "react-dom": "19.1.1",
     "react-hook-form": "^7.62.0",
     "recharts": "^2.15.4",
     "sonner": "^2.0.7",
@@ -54,8 +54,8 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
-    "@types/react": "^19.1.11",
-    "@types/react-dom": "^19",
+    "@types/react": "19.1.11",
+    "@types/react-dom": "19.1.11",
     "eslint": "^9",
     "eslint-config-next": "15.4.6",
     "supabase": "^2.34.3",
